authorization page edited

--- a/authorizationPage.html
+++ b/authorizationPage.html
@@ -26,8 +26,8 @@
             <div id="authorizationBox">
                 <form id="authorizationForm" method="post">
                     <input type="text" class="input" id="login" placeholder="Логин">
-                    <input type="password" class="input" id="password" placeholder="Пароль">
-                    <button id="submit">Продолжить</button>
+                    <input type="password" class="input" id="password" placeholder="Пароль"/>
+                    <input type="submit" id="submit" value="Войти">
                     <button id="newAccountButton">Зарегистрироваться</button>
                 </form>
             </div>
