registration page edited

--- a/profilePage.html
+++ b/profilePage.html
@@ -19,7 +19,7 @@
       <div class="header">
         <a href="mainPage.html" id="logo">Pro Credit</a>
         <a href="applicationsPage.html" id="applications">Заявки</a>
-        <a href="profilePage.html" id="profile">Профиль</a>
+        <a href="authorizationPage.html" id="profile">Профиль</a>
       </div>
     </header>
     <main class="profilepagePage"></main>
