started creating bd

--- a/public/registrationPage.html
+++ b/public/registrationPage.html
@@ -28,19 +28,17 @@
                     <div class="inputData">
                         <div class="personalData">
                             <p class="subHeading" id="personalDataLabel">Личные данные</p>
-                            <input type="text" class="input" id="surname" placeholder="Фамилия" />
-                            <input type="text" class="input" id="name" placeholder="Имя" />
-                            <input type="text" class="input" id="patronymic" placeholder="Отчество" />
+                            <input type="text" class="input" id="surname" name="surname" placeholder="Фамилия" />
+                            <input type="text" class="input" id="name" name="name" placeholder="Имя" />
+                            <input type="text" class="input" id="patronymic" name="patronymic" placeholder="Отчество" />
                         </div>
                         <div class="contactInformation">
                             <p class="subHeading" id="contactInformationLabel">
-                                Контактная инормация
+                                Данные для входа
                             </p>
-                            <input type="tel" class="input" id="tel" placeholder="+7" />
-                            <input type="email" class="input" id="email" placeholder="email" />
-                            <p class="explanation" id="emailExplanation">
-                                Email используется для входа в аккаунт
-                            </p>
+                            <input type="email" class="input" id="login" name="login" placeholder="Логин" />
+                            <input type="password" class="input" id="passwordFirst" name="password" placeholder="Пароль" />
+                            <input type="password" class="input" id="passwordSecond" placeholder="Повторите пароль" />
                         </div>
                     </div>
                     <div class="inputButton">
