working on authorization

--- a/public/authorizationPage.html
+++ b/public/authorizationPage.html
@@ -1,43 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="/public/css/style.css" />
     <title>Авторизация | ProCredit</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="header">
-            <a href="mainPage.html" id="logo">Pro Credit</a>
-            <a href="applicationsPage.html" id="applications">Заявки</a>
-            <a href="authorizationPage.html" id="profile">Профиль</a>
-        </div>
+      <div class="header">
+        <a href="mainPage.html" id="logo">Pro Credit</a>
+        <a href="applicationsPage.html" id="applications">Заявки</a>
+        <a href="authorizationPage.html" id="profile">Профиль</a>
+      </div>
     </header>
     <main>
-        <div class="authoriaztionPage">
-            <h1 id="authoriaztion">Авторизация</h1>
-            <div id="authorizationBox">
-                <form id="authorizationForm" method="post">
-                    <input type="text" class="input" id="login" placeholder="Логин" />
-                    <input type="password" class="input" id="password" placeholder="Пароль" />
-                    <input type="submit" id="submit" value="Войти" href="mainPage.html" />
-                    <button id="newAccountButton">
+      <div class="authoriaztionPage">
+        <h1 id="authoriaztion">Авторизация</h1>
+        <div id="authorizationBox">
+          <form id="authorizationForm" method="post">
+            <input type="text" class="input" id="login" placeholder="Логин" />
+            <input
+              type="password"
+              class="input"
+              id="password"
+              placeholder="Пароль" />
+            <input
+              type="submit"
+              id="submit"
+              value="Войти"
+              href="mainPage.html" />
+            <button id="newAccountButton">
               <a href="registrationPage.html">Зарегистрироваться</a>
             </button>
-                </form>
-            </div>
+          </form>
         </div>
+      </div>
     </main>
     <footer class="footer">
-        <p id="author">Disigned by @perpetuumm0bi1e</p>
+      <p id="author">Disigned by @perpetuumm0bi1e</p>
     </footer>
-</body>
-
+  </body>
 </html>
