--- a/public/profilePage.html
+++ b/public/profilePage.html
@@ -11,7 +11,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap"
       rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/public/css/style.css" />
     <title>Профиль | ProCredit</title>
   </head>
   <body>
