--- a/public/mainPage.html
+++ b/public/mainPage.html
@@ -12,7 +12,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap"
       rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="/public/style.css" />
+    <link rel="stylesheet" href="/public/css/style.css" />
     <title>Главная | ProCredit</title>
   </head>
 
