applications page edited

--- a/public/authorizationPage.html
+++ b/public/authorizationPage.html
@@ -19,8 +19,8 @@
     <header>
       <div class="header">
         <a href="mainPage.html" id="logo">Pro Credit</a>
-        <a href="applicationsPage.html" id="applications">Заявки</a>
-        <a href="authorizationPage.html" id="profile">Профиль</a>
+        <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
+        <a href="authorizationPage.html" id="profileLink">Профиль</a>
       </div>
     </header>
     <main>
@@ -35,6 +35,7 @@
               id="password"
               placeholder="Пароль" />
             <input
+              class="buttonType1"
               type="submit"
               id="submit"
               value="Войти"
