--- a/public/registrationPage.html
+++ b/public/registrationPage.html
@@ -19,8 +19,8 @@
     <header>
       <div class="header">
         <a href="mainPage.html" id="logo">Pro Credit</a>
-        <a href="applicationsPage.html" id="applications">Заявки</a>
-        <a href="authorizationPage.html" id="profile">Профиль</a>
+        <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
+        <a href="authorizationPage.html" id="profileLink">Профиль</a>
       </div>
     </header>
     <main>
@@ -81,6 +81,7 @@
             </div>
             <div class="inputButton">
               <input
+                class="buttonType1"
                 type="submit"
                 id="createAnAccount"
                 value="Создать аккаунт"
