--- a/public/applicationsPage.html
+++ b/public/applicationsPage.html
@@ -18,13 +18,43 @@
     <header>
       <div class="header">
         <a href="mainPage.html" id="logo">Pro Credit</a>
-        <a href="applicationsPage.html" id="applications">Заявки</a>
-        <a href="authorizationPage.html" id="profile">Профиль</a>
+        <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
+        <a href="authorizationPage.html" id="profileLink">Профиль</a>
       </div>
     </header>
-    <main class="applicationsPage"></main>
+    <main class="applicationsPage">
+      <h1 id="applications">Заявки</h1>
+      <div id="applicationsBox">
+        <table class="applicationsTable">
+          <thead class="tableHeader">
+            <tr>
+              <th>Номер</th>
+              <th>Тип</th>
+              <th>Дата создания</th>
+              <th>Статус</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="tableCell">394872934</td>
+              <td class="tableCell">Автокредит</td>
+              <td class="tableCell">27.10.2022</td>
+              <td class="tableCell">На рассмотрении</td>
+            </tr>
+            <tr>
+              <td class="tableCell">39487678</td>
+              <td class="tableCell">Оформление кредитной карты</td>
+              <td class="tableCell">07.05.2017</td>
+              <td class="tableCell">Одобрена</td>
+            </tr>
+          </tbody>
+        </table>
+        <button class="addButton">+</button>
+      </div>
+    </main>
     <footer class="footer">
       <p id="author">Disigned by @perpetuumm0bi1e</p>
     </footer>
   </body>
+  <script type="text/javascript" src="script.js"></script>
 </html>
