--- a/public/mainPage.html
+++ b/public/mainPage.html
@@ -20,8 +20,8 @@
     <header>
       <div class="header">
         <a href="mainPage.html" id="logo">Pro Credit</a>
-        <a href="applicationsPage.html" id="applications">Заявки</a>
-        <a href="authorizationPage.html" id="profile">Профиль</a>
+        <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
+        <a href="authorizationPage.html" id="profileLink">Профиль</a>
       </div>
     </header>
     <main>
@@ -30,39 +30,31 @@
         <div class="servicesBoxesContainer">
           <div class="servicesBoxes" id="cashCreditBox">
             <p id="cashCreditTitle">Кредит наличными</p>
-            <img
-              id="cashCreditIcon"
-              src="https://i.ibb.co/XFjNWr4/cash-icon.png" />
+            <img id="cashCreditIcon" src="/public/img/cashCreditIcon.svg" />
           </div>
           <div class="servicesBoxes" id="creditCardBox">
             <p id="creditCardTitle">Оформление кредитной карты</p>
-            <img
-              id="creditCardIcon"
-              src="https://i.ibb.co/y5cqn0c/credit-card-icon.png" />
+            <img id="creditCardIcon" src="/public/img/creditCardIcon.svg" />
           </div>
           <div class="servicesBoxes" id="educationCreditBox">
             <p id="educationCreditTitle">Кредит на образование</p>
             <img
               id="educationCreditIcon"
-              src="https://i.ibb.co/LtR8nr0/education-icon.png" />
+              src="/public/img/educationCreditIcon.svg" />
           </div>
           <div class="servicesBoxes" id="mortgageBox">
             <p id="mortgageTitle">Ипотека</p>
-            <img
-              id="mortgageIcon"
-              src="https://i.ibb.co/dB5mJgT/mortgage-icon.png" />
+            <img id="mortgageIcon" src="/public/img/mortgageIcon.svg" />
           </div>
           <div class="servicesBoxes" id="autoCreditBox">
             <p id="autoCreditTitle">Автокредит</p>
-            <img
-              id="autoCreditIcon"
-              src="https://i.ibb.co/kBCbwtm/auto-icon.png" />
+            <img id="autoCreditIcon" src="/public/img/autoCreditIcon.svg" />
           </div>
           <div class="servicesBoxes" id="businessCreditBox">
             <p id="businessCreditTitle">Кредит на открытие бизнеса</p>
             <img
               id="businessCreditIcon"
-              src="https://i.ibb.co/CW37Zmt/business-icon.png" />
+              src="/public/img/businessCreditIcon.svg" />
           </div>
         </div>
       </div>
