still working on autentication

--- a/public/autenticationPage.html
+++ b/public/autenticationPage.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap"
       rel="stylesheet" />
     <link rel="stylesheet" href="/public/css/style.css" />
-    <title>Авторизация | ProCredit</title>
+    <title>Вход | ProCredit</title>
   </head>
 
   <body>
@@ -20,14 +20,14 @@
       <div class="header">
         <a href="mainPage.html" id="logo">Pro Credit</a>
         <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
-        <a href="authorizationPage.html" id="profileLink">Профиль</a>
+        <a href="autenticationPage.html" id="profileLink">Профиль</a>
       </div>
     </header>
     <main>
-      <div class="authoriaztionPage">
-        <h1 id="authoriaztion">Авторизация</h1>
-        <div id="authorizationBox">
-          <form id="authorizationForm" method="post">
+      <div class="autenticationPage">
+        <h1 id="autentication">Вход</h1>
+        <div id="autenticationBox">
+          <form id="autenticationForm" method="post">
             <input type="text" class="input" id="login" placeholder="Логин" />
             <input
               type="password"
