--- a/public/profilePage.html
+++ b/public/profilePage.html
@@ -19,7 +19,7 @@
       <div class="header">
         <a href="mainPage.html" id="logo">Pro Credit</a>
         <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
-        <a href="authorizationPage.html" id="profileLink">Профиль</a>
+        <a href="autenticationPage.html" id="profileLink">Профиль</a>
       </div>
     </header>
     <main class="profilePage">
@@ -49,6 +49,7 @@
           </div>
         </div>
         <div class="profileBoxButtons">
+          <button class="buttonType1" id="logOut">Выйти</button>
           <button class="buttonType1" id="editPersonalInformation">
             Изменить
           </button>
