--- a/public/registrationPage.html
+++ b/public/registrationPage.html
@@ -20,7 +20,7 @@
       <div class="header">
         <a href="mainPage.html" id="logo">Pro Credit</a>
         <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
-        <a href="authorizationPage.html" id="profileLink">Профиль</a>
+        <a href="autenticationPage.html" id="profileLink">Профиль</a>
       </div>
     </header>
     <main>
