--- a/public/applicationsPage.html
+++ b/public/applicationsPage.html
@@ -19,10 +19,56 @@
       <div class="header">
         <a href="mainPage.html" id="logo">Pro Credit</a>
         <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
-        <a href="authorizationPage.html" id="profileLink">Профиль</a>
+        <a href="autenticationPage.html" id="profileLink">Профиль</a>
       </div>
     </header>
     <main class="applicationsPage">
+      <div class="modal-addApplication">
+        <div class="modalContent">
+          <div class="closeModalButtonContainer">
+            <button class="closeModalButton">x</button>
+          </div>
+          <p class="subHeading" id="addApplicationHeading">
+            <b>Создание заявки</b>
+          </p>
+          <div class="creatingApplication">
+            <form id="applicationForm" method="post">
+              <select id="applicationType" name="applicationType">
+                <option class="applicationTypeOption">Кредит наличными</option>
+                <option class="applicationTypeOption">
+                  Оформление кредитной карты
+                </option>
+                <option class="applicationTypeOption">
+                  Кредит на образование
+                </option>
+                <option class="applicationTypeOption">Ипотека</option>
+                <option class="applicationTypeOption">Автокредит</option>
+                <option class="applicationTypeOption">
+                  Кредит на открытие бизнеса
+                </option>
+              </select>
+              <input
+                type="number"
+                class="input"
+                id="sum"
+                name="sum"
+                placeholder="Сумма" />
+              <input
+                type="date"
+                class="input"
+                id="dueDate"
+                name="dueDate"
+                placeholder="Срок" />
+              <input
+                class="buttonType1"
+                type="submit"
+                id="createAnApplication"
+                value="Отправить"
+                href="applicationsPage.html" />
+            </form>
+          </div>
+        </div>
+      </div>
       <h1 id="applications">Заявки</h1>
       <div id="applicationsBox">
         <table class="applicationsTable">
@@ -49,7 +95,7 @@
             </tr>
           </tbody>
         </table>
-        <button class="addButton">+</button>
+        <button class="addButton" data-trigger>+</button>
       </div>
     </main>
     <footer class="footer">
