--- a/public/applicationsPage.html
+++ b/public/applicationsPage.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap"
-      rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/public/css/style.css" />
     <title>Заявки | ProCredit</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <div class="header">
-        <a href="mainPage.html" id="logo">Pro Credit</a>
-        <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
-        <a href="autenticationPage.html" id="profileLink">Профиль</a>
-      </div>
+        <div class="header">
+            <a href="mainPage.html" id="logo">Pro Credit</a>
+            <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
+            <a href="autenticationPage.html" id="profileLink">Профиль</a>
+        </div>
     </header>
     <main class="applicationsPage">
-      <div class="modal-addApplication">
-        <div class="modalContent">
-          <div class="closeModalButtonContainer">
-            <button class="closeModalButton">x</button>
-          </div>
-          <p class="subHeading" id="addApplicationHeading">
-            <b>Создание заявки</b>
-          </p>
-          <div class="creatingApplication">
-            <form id="applicationForm" method="post">
-              <select id="applicationType" name="applicationType">
+        <div class="modal-addApplication">
+            <div class="modalContent">
+                <div class="closeModalButtonContainer">
+                    <button class="closeModalButton">x</button>
+                </div>
+                <p class="subHeading" id="addApplicationHeading">
+                    <b>Создание заявки</b>
+                </p>
+                <div class="creatingApplication">
+                    <form id="applicationForm" method="post">
+                        <select id="applicationType" name="applicationType">
                 <option class="applicationTypeOption">Кредит наличными</option>
                 <option class="applicationTypeOption">
                   Оформление кредитной карты
@@ -47,60 +45,47 @@
                   Кредит на открытие бизнеса
                 </option>
               </select>
-              <input
-                type="number"
-                class="input"
-                id="sum"
-                name="sum"
-                placeholder="Сумма" />
-              <input
-                type="date"
-                class="input"
-                id="dueDate"
-                name="dueDate"
-                placeholder="Срок" />
-              <input
-                class="buttonType1"
-                type="submit"
-                id="createAnApplication"
-                value="Отправить"
-                href="applicationsPage.html" />
-            </form>
-          </div>
+                        <input type="number" class="input" id="sum" name="sum" placeholder="Сумма" />
+                        <input type="date" class="input" id="dueDate" name="dueDate" placeholder="Срок" />
+                        <input class="buttonType1" type="submit" id="createAnApplication" value="Отправить" href="applicationsPage.html" />
+                    </form>
+                </div>
+            </div>
         </div>
-      </div>
-      <h1 id="applications">Заявки</h1>
-      <div id="applicationsBox">
-        <table class="applicationsTable">
-          <thead class="tableHeader">
-            <tr>
-              <th>Номер</th>
-              <th>Тип</th>
-              <th>Дата создания</th>
-              <th>Статус</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="tableCell">394872934</td>
-              <td class="tableCell">Автокредит</td>
-              <td class="tableCell">27.10.2022</td>
-              <td class="tableCell">На рассмотрении</td>
-            </tr>
-            <tr>
-              <td class="tableCell">39487678</td>
-              <td class="tableCell">Оформление кредитной карты</td>
-              <td class="tableCell">07.05.2017</td>
-              <td class="tableCell">Одобрена</td>
-            </tr>
-          </tbody>
-        </table>
-        <button class="addButton" data-trigger>+</button>
-      </div>
+        <h1 id="applications">Заявки</h1>
+        <div id="applicationsBox">
+            <table class="applicationsTable">
+                <thead class="tableHeader">
+                    <tr>
+                        <th>Номер</th>
+                        <th>Тип</th>
+                        <th>Дата создания</th>
+                        <th>Статус</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="tableCell">394872934</td>
+                        <td class="tableCell">Автокредит</td>
+                        <td class="tableCell">27.10.2022</td>
+                        <td class="tableCell">На рассмотрении</td>
+                    </tr>
+                    <tr>
+                        <td class="tableCell">39487678</td>
+                        <td class="tableCell">Оформление кредитной карты</td>
+                        <td class="tableCell">07.05.2017</td>
+                        <td class="tableCell">Одобрена</td>
+                    </tr>
+                </tbody>
+            </table>
+            <button class="addButton" data-trigger>+</button>
+        </div>
     </main>
     <footer class="footer">
-      <p id="author">Disigned by @perpetuumm0bi1e</p>
+        <p id="author">Disigned by @perpetuumm0bi1e</p>
+        <p id="author">2023</p>
     </footer>
-  </body>
-  <script type="text/javascript" src="script.js"></script>
+</body>
+<script type="text/javascript" src="script.js"></script>
+
 </html>
