--- a/public/autenticationPage.html
+++ b/public/autenticationPage.html
@@ -1,54 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap"
-      rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/public/css/style.css" />
     <title>Вход | ProCredit</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <div class="header">
-        <a href="mainPage.html" id="logo">Pro Credit</a>
-        <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
-        <a href="autenticationPage.html" id="profileLink">Профиль</a>
-      </div>
+        <div class="header">
+            <a href="mainPage.html" id="logo">Pro Credit</a>
+            <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
+            <a href="autenticationPage.html" id="profileLink">Профиль</a>
+        </div>
     </header>
     <main>
-      <div class="autenticationPage">
-        <h1 id="autentication">Вход</h1>
-        <div id="autenticationBox">
-          <form id="autenticationForm" method="post">
-            <input type="text" class="input" id="login" placeholder="Логин" />
-            <input
-              type="password"
-              class="input"
-              id="password"
-              placeholder="Пароль" />
-            <input
-              class="buttonType1"
-              type="submit"
-              id="submit"
-              value="Войти"
-              href="mainPage.html" />
-            <button id="newAccountButton">
+        <div class="autenticationPage">
+            <h1 id="autentication">Вход</h1>
+            <div id="autenticationBox">
+                <form id="autenticationForm" method="post">
+                    <input type="text" class="input" id="login" placeholder="Логин" />
+                    <input type="password" class="input" id="password" placeholder="Пароль" />
+                    <input class="buttonType1" type="submit" id="submit" value="Войти" href="mainPage.html" />
+                    <button id="newAccountButton">
               <a href="registrationPage.html">Зарегистрироваться</a>
             </button>
-          </form>
+                </form>
+            </div>
         </div>
-      </div>
     </main>
     <footer class="footer">
-      <p id="author">Disigned by @perpetuumm0bi1e</p>
+        <p id="author">Disigned by @perpetuumm0bi1e</p>
+        <p id="author">2023</p>
     </footer>
-  </body>
+</body>
+
 </html>
