--- a/public/mainPage.html
+++ b/public/mainPage.html
@@ -1,66 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap"
-      rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/public/css/style.css" />
     <title>Главная | ProCredit</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <div class="header">
-        <a href="mainPage.html" id="logo">Pro Credit</a>
-        <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
-        <a href="autenticationPage.html" id="profileLink">Профиль</a>
-      </div>
+        <div class="header">
+            <a href="mainPage.html" id="logo">Pro Credit</a>
+            <a href="applicationsPage.html" id="applicationsLink">Заявки</a>
+            <a href="autenticationPage.html" id="profileLink">Профиль</a>
+        </div>
     </header>
     <main>
-      <div class="mainPage">
-        <h1 id="services">Услуги</h1>
-        <div class="servicesBoxesContainer">
-          <div class="servicesBoxes" id="cashCreditBox">
-            <p id="cashCreditTitle">Кредит наличными</p>
-            <img id="cashCreditIcon" src="/public/img/cashCreditIcon.svg" />
-          </div>
-          <div class="servicesBoxes" id="creditCardBox">
-            <p id="creditCardTitle">Оформление кредитной карты</p>
-            <img id="creditCardIcon" src="/public/img/creditCardIcon.svg" />
-          </div>
-          <div class="servicesBoxes" id="educationCreditBox">
-            <p id="educationCreditTitle">Кредит на образование</p>
-            <img
-              id="educationCreditIcon"
-              src="/public/img/educationCreditIcon.svg" />
-          </div>
-          <div class="servicesBoxes" id="mortgageBox">
-            <p id="mortgageTitle">Ипотека</p>
-            <img id="mortgageIcon" src="/public/img/mortgageIcon.svg" />
-          </div>
-          <div class="servicesBoxes" id="autoCreditBox">
-            <p id="autoCreditTitle">Автокредит</p>
-            <img id="autoCreditIcon" src="/public/img/autoCreditIcon.svg" />
-          </div>
-          <div class="servicesBoxes" id="businessCreditBox">
-            <p id="businessCreditTitle">Кредит на открытие бизнеса</p>
-            <img
-              id="businessCreditIcon"
-              src="/public/img/businessCreditIcon.svg" />
-          </div>
+        <div class="mainPage">
+            <h1 id="services">Услуги</h1>
+            <div class="servicesBoxesContainer">
+                <div class="servicesBoxes" id="cashCreditBox">
+                    <p id="cashCreditTitle">Кредит наличными</p>
+                    <img id="cashCreditIcon" src="/public/img/cashCreditIcon.svg" />
+                </div>
+                <div class="servicesBoxes" id="creditCardBox">
+                    <p id="creditCardTitle">Оформление кредитной карты</p>
+                    <img id="creditCardIcon" src="/public/img/creditCardIcon.svg" />
+                </div>
+                <div class="servicesBoxes" id="educationCreditBox">
+                    <p id="educationCreditTitle">Кредит на образование</p>
+                    <img id="educationCreditIcon" src="/public/img/educationCreditIcon.svg" />
+                </div>
+                <div class="servicesBoxes" id="mortgageBox">
+                    <p id="mortgageTitle">Ипотека</p>
+                    <img id="mortgageIcon" src="/public/img/mortgageIcon.svg" />
+                </div>
+                <div class="servicesBoxes" id="autoCreditBox">
+                    <p id="autoCreditTitle">Автокредит</p>
+                    <img id="autoCreditIcon" src="/public/img/autoCreditIcon.svg" />
+                </div>
+                <div class="servicesBoxes" id="businessCreditBox">
+                    <p id="businessCreditTitle">Кредит на открытие бизнеса</p>
+                    <img id="businessCreditIcon" src="/public/img/businessCreditIcon.svg" />
+                </div>
+            </div>
         </div>
-      </div>
     </main>
     <footer class="footer">
-      <p id="author">Disigned by @perpetuumm0bi1e</p>
+        <p id="author">Disigned by @perpetuumm0bi1e</p>
+        <p id="author">2023</p>
     </footer>
-  </body>
+</body>
+
 </html>
